--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-scroll": "^1.8.7",
+    "axios": "^1.6.0",
     "chart.js": "^4.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
