--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.8.9",
